<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".about.AboutActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/toolbarColor"
        android:elevation="7dp"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:title="@string/about"
        app:titleTextColor="@android:color/white" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".3" />

    <ImageView
        android:id="@+id/communityImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/description_community_logo"
        android:paddingTop="16dp"
        app:layout_constraintBottom_toTopOf="@id/guidelineTop"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_community" />

    <TextView
        android:id="@+id/aboutAppTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/about_app_title"
        android:textAppearance="@style/AboutTitleStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/communityImage" />

    <TextView
        android:id="@+id/aboutAppContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/about_app_content"
        android:textAppearance="@style/AboutTextStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutAppTitle"
        app:layout_goneMarginEnd="16dp" />

    <TextView
        android:id="@+id/aboutEventTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/about_event_title"
        android:textAppearance="@style/AboutTitleStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aboutAppContent" />

    <TextView
        android:id="@+id/aboutEventContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/about_event_content"
        android:textAppearance="@style/AboutTextStyle"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutEventTitle"
        app:layout_goneMarginEnd="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>